Details sur constructeurs. Modif des jeux de test.